fixed bugs introduced by last checkin which caused the program to not work if there were no saved preferences.